asset/default/css/main.css
/*
 Created on     April 05th, 2016
 Created by     Greentrees
 */

@charset "utf-8";

body {
    padding-top:70px;
    font-family: Arial !important;
}

a {
    -webkit-tap-highlight-color: rgba(226, 226, 226, 0.4);
}

a.clean {
    color: inherit !important;
}

.footer {
    background-color: #3e444c !important;
    border-top: 1px solid rgba(0, 0, 0, 0.6);
}

.w10, .w20, .w30, .w40, .w50, .w60, .w70, .w80, .w90 {
    display: inline-block;
}
.w10 {width: 10%}
.w20 {width: 20%}
.w30 {width: 30%}
.w40 {width: 40%}
.w50 {width: 50%}
.w60 {width: 60%}
.w70 {width: 70%}
.w80 {width: 80%}
.w90 {width: 90%}

.navbar .navbtn-group {
    float: left;
    display: block;
    width: auto;
    height: 50px;
}
.navbar .navbtn-group:after {
    content: "";
    clear: both;
    display: block;
}
.navbar .navbtn-group a {
    color: inherit;
    text-decoration: none;
}
.navbar .navbtn-group > a {
    display: block;
    float:left;
    box-sizing: border-box;
    height: 50px;
    padding: 14px 10px;
    border-right:1px solid #dfdfdf;
}
.navbar .navbtn-group > .active {
    background: #272b2e;
    color: #fff;
}
.navbar .navbtn-group > .open {
    background: #272b2e;
    color: #fff;
}

.navbar .dropdown {
    display: block;
    float:left;
    border-right:1px solid #dfdfdf;
}
.navbar .dropdown-toggle {
    display: block;
    box-sizing: border-box;
    height: 50px;
    padding: 14px 10px;
}

.navbar .currency {
    float: right;
    padding: 14px 0;
    font-weight: bold;
    font-size: 16px;
}

.dropdown-menu a {
    padding-top:5px !important;
    padding-bottom:5px !important;
}

.text-outgo {
    color: red;
}
.text-income {
    color: #2EFEF7;
}

select,
textarea,
input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="search"],
input[type="tel"],
input[type="color"] {
    font-size: 16px;
}

.form-group > select,
.row > .col-xs-1 > select,
.row > .col-xs-2 > select,
.row > .col-xs-3 > select,
.row > .col-xs-4 > select,
.row > .col-xs-5 > select,
.row > .col-xs-6 > select,
.row > .col-xs-7 > select,
.row > .col-xs-8 > select,
.row > .col-xs-9 > select,
.row > .col-xs-10 > select,
.row > .col-xs-11 > select,
.row > .col-xs-12 > select {
    font-size: 16px;
}

input[type="date"] {
    display:inline-block;
    -webkit-appearance: textfield;
    padding-top: 0px;
}

/* Chỉnh span trong progress bar vô giữa div */
.progress {
    position: relative;
}

.progress span {
    position: absolute;
    display: block;
    width: 100%;
}

.ui-autocomplete-loading {
    background:url('../images/indicator.gif') no-repeat;
    background-position: right 10px center;
}

.table-ex td {
    vertical-align: middle !important;
}

.page-nav {
    line-height: 30px;
    background-color: #565656;
    padding: 0;
    border-radius: 5px;
    margin-bottom: 20px;
}

.page-nav .col-xs-1,
.page-nav .col-xs-2,
.page-nav .col-xs-3,
.page-nav .col-xs-4,
.page-nav .col-xs-5,
.page-nav .col-xs-6,
.page-nav .col-xs-7,
.page-nav .col-xs-8,
.page-nav .col-xs-9,
.page-nav .col-xs-10,
.page-nav .col-xs-11,
.page-nav .col-xs-12 {
    line-height: 30px;
}

.no-top-border {
    border-top: none !important;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

/* Sticky footer style
-------------------------------------------------- */
html {
    position: relative;
    min-height: 100%;
}
body {
    /* Margin bottom by footer height */
    margin-bottom: 80px;
}
.footer {
    position: absolute;
    display: table;
    bottom: 0;
    width: 100%;
    /* Set the fixed height of the footer here */
    height: 80px;
    background-color: #f5f5f5;
}

.footer .container {
    display: table-cell;
    height: 80px;
    width: 100%;
    vertical-align: middle;
    text-align: center;
}

table.last-row-is-total tr:nth-last-child(2) td,
table.last-row-is-total tr:nth-last-child(2) th {
    border-bottom: 1px solid
}

/* Infinite loading style
-------------------------------------------------- */
@keyframes blink {
  75% { opacity: 0.0; }
}
@-webkit-keyframes blink {
  75% { opacity: 0.0; }
}
.infinite-loading:after {
    content: 'Loading...';
    display: block;
    margin-bottom: 20px;
    text-align: center;
    animation: blink 1s step-end infinite;
    -webkit-animation: blink 0.5s step-end infinite;
}

